hub/manifests/broker/02-hub-tunnel-broker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-tunnel-broker
  namespace: broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub-tunnel-broker
  template:
    metadata:
      labels:
        app: hub-tunnel-broker
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: hub-tunnel-broker
          image: gcr.io/traefiklabs/hub-tunnel-broker:latest
          imagePullPolicy: IfNotPresent
          args:
            - serve
---
apiVersion: v1
kind: Service
metadata:
  name: hub-tunnel-broker
  namespace: broker
  labels:
    app: hub-tunnel-broker
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: hub-tunnel-broker
    - port: 40000
      targetPort: 40000
      name: hub-tunnel-broker-debug
  selector:
    app: hub-tunnel-broker

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: brokers-tls
  namespace: broker
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/broker`)
      services:
        - name: hub-tunnel-broker
          port: 80
      middlewares:
        - name: stripprefix
          namespace: hub
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: brokers
  namespace: broker
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/broker`)
      services:
        - name: hub-tunnel-broker
          port: 80
      middlewares:
        - name: stripprefix
          namespace: hub
